--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
+    "lucide": "^0.446.0",
+    "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
