--- a/front/package.json
+++ b/front/package.json
@@ -14,9 +14,11 @@
     "@mui/material": "^6.1.1",
     "lucide": "^0.446.0",
     "lucide-react": "^0.446.0",
+    "material-react-table": "^3.0.1",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
