--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.58.0",
     "lucide": "^0.446.0",
     "lucide-react": "^0.446.0",
     "material-react-table": "^3.0.1",
