--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@types/node": "^20",
